--- a/python/Session-1/basic.ipynb
+++ b/python/Session-1/basic.ipynb
@@ -8,8 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +23,7 @@
        "2"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +154,252 @@
     "## [result and condition]\n",
     "## [expression items condition ]\n",
     "print([x**2 for x in range(10)])\n",
+    "\n",
+    "## Nested list comphresion \n",
+    "\n",
+    "##  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Function\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Function is block of code, reusable code and readability\n",
+    "\n",
+    "def first_function():\n",
+    "    return \"First Function\"\n",
+    "\n",
+    "print(first_function())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Formatted String (New)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subbu Geetha\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Formatted String\n",
+    "name = \"Subbu\"\n",
+    "board_name = f\"{name} Geetha\"\n",
+    "\n",
+    "print(board_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def star_function(*args):\n",
+    "    print(args)\n",
+    "\n",
+    "star_function(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Krithik', 'age': 6}\n",
+      "{'name': 'Krithik', 'age': 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def double_star_function(**args):\n",
+    "    print(args)\n",
+    "\n",
+    "custom_dict={\"name\":\"Krithik\",\"age\":6}\n",
+    "\n",
+    "print(custom_dict)\n",
+    "##print(**custom_dict)\n",
+    "double_star_function(**custom_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Krithik', 'age': 6}\n",
+      "(12, 34)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_both(*args,**dick_args):\n",
+    "    print(dick_args)\n",
+    "    print(args)\n",
+    "\n",
+    "print_both(12,34, **custom_dict)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lamda Expression    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "## lamda arguments: expression\n",
+    "\n",
+    "even = lambda val : val%2 ==0\n",
+    "\n",
+    "print(even(12))\n",
+    "print(even(13))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, True, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_numbers = [1,2,5]\n",
+    "\n",
+    "print([even(item) for item in list_of_numbers])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<map object at 0x000001B5A6E02EC0>\n",
+      "(1, 4, 9, 16)\n",
+      "[3, 5, 8]\n",
+      "[2, 3, 4]\n",
+      "[2, 3, 4]\n",
+      "['ABC', 'CDF']\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1,2,3,4]\n",
+    "\n",
+    "## map(function, iteratable)\n",
+    "print(map(lambda x: x*x, numbers))\n",
+    "print(tuple(map(lambda x: x*x, numbers)))\n",
+    "\n",
+    "\n",
+    "n1 = [1,2,3]\n",
+    "n2 = [2,3,5]\n",
+    "\n",
+    "print(list(map(lambda x,y: x+y, n1,n2))) # Sum of n1 + n2\n",
+    "\n",
+    "n3 = [\"2\",\"3\",\"4\"]\n",
+    "\n",
+    "print(list(map(lambda x: int(x), n3)))\n",
+    "\n",
+    "print(list(map(int, n3)))\n",
+    "\n",
+    "words = [\"abc\",\"cdf\"]\n",
+    "\n",
+    "print(list(map(str.upper, words)))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Subbu', 'Geetha']\n"
+     ]
+    }
+   ],
+   "source": [
+    "people = [\n",
+    "    {\n",
+    "        'name': 'Subbu'\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'Geetha'\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "print(list(map(lambda obj: obj['name'], people)))"
    ]
   }
  ],
