--- a/python/NLP/Tokenization/Tokenization-1.ipynb
+++ b/python/NLP/Tokenization/Tokenization-1.ipynb
@@ -282,7 +282,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "EnvK",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
