--- a/python/NLP/Text2Vector/BagOfWords.ipynb
+++ b/python/NLP/Text2Vector/BagOfWords.ipynb
@@ -9,24 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting chardet\n",
-      "  Downloading chardet-5.2.0-py3-none-any.whl.metadata (3.4 kB)\n",
-      "Downloading chardet-5.2.0-py3-none-any.whl (199 kB)\n",
-      "Installing collected packages: chardet\n",
-      "Successfully installed chardet-5.2.0\n",
-      "Detected encoding: Windows-1252\n"
+      "Requirement already satisfied: chardet in c:\\git\\genai\\python\\envk\\lib\\site-packages (5.2.0)\n",
+      "Detected encoding: utf-8\n"
      ]
     }
    ],
    "source": [
-    "!pip install chardet\n",
     "import chardet\n",
     "with open(\"spam.csv\", \"rb\") as f:\n",
     "    raw_data = f.read(100000)  # Read a large enough sample\n",
@@ -37,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +149,7 @@
        "[5522 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +189,7 @@
        "5522"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +209,7 @@
        "'Go until jurong point, crazy.. Available only in bugis n great world la e buffet... Cine there got amore wat...'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1229,7 @@
        " ...]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2264,7 +2259,7 @@
        " ...}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2289,7 +2284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3298,7 +3293,7 @@
        " ...]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3320,7 +3315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4329,7 +4324,7 @@
        " ...}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4339,6 +4334,89 @@
     "\n",
     "cv = CountVectorizer(max_features=2500, binary=True)\n",
     "\n",
+    "X = cv.fit_transform(tokenized_messages)\n",
+    "\n",
+    "cv.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "N-Gram <br>\n",
+    "An N-gram is a contiguous sequence of N items (words, characters, or symbols) from a given text. It is commonly used in Natural Language Processing (NLP) for tasks such as text generation, machine translation, and speech recognition.\n",
+    "\n",
+    "Unigram (single words) - (1,1)\n",
+    "Bigram - (2,2)\n",
+    "Mixed n-grams (Unigram + Bigram) - (2,3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'go': np.int64(4),\n",
+       " 'ok': np.int64(8),\n",
+       " 'free': np.int64(2),\n",
+       " 'dont': np.int64(1),\n",
+       " 'call': np.int64(0),\n",
+       " 'im': np.int64(5),\n",
+       " 'ur': np.int64(9),\n",
+       " 'know': np.int64(6),\n",
+       " 'ltgt': np.int64(7),\n",
+       " 'get': np.int64(3)}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv = CountVectorizer(max_features=10, ngram_range=(1,1))\n",
+    "\n",
+    "X = cv.fit_transform(tokenized_messages)\n",
+    "\n",
+    "cv.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'let know': np.int64(3),\n",
+       " 'please call': np.int64(4),\n",
+       " 'ill call': np.int64(1),\n",
+       " 'call later': np.int64(0),\n",
+       " 'ill call later': np.int64(2)}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "cv = CountVectorizer(max_features=5, ngram_range=(2,3))\n",
     "X = cv.fit_transform(tokenized_messages)\n",
     "\n",
     "cv.vocabulary_"
